[package]
name = "cargo-tree"
version = "0.10.1"
authors = ["Steven Fackler <sfackler@palantir.com>"]
license = "MIT/Apache-2.0"
description = "A Cargo subcommand that visualizes a crate's dependency graph in a tree-like format"
repository = "https://github.com/sfackler/cargo-tree"
readme = "README.md"

[dependencies]
petgraph = "0.4"
rustc-serialize = "0.3"

[dependencies.cargo]
git = "https://github.com/rust-lang/cargo.git"
rev = "2324c2bbaf7fc6ea9cbdd77c034ef1af769cb617"
